# CPC-Helper

./: .gitignore  AI_READ.md  README.md  index.html  package-lock.json  package.json  prompt.md  sop.md  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: file_list.txt  merged_output.txt  merger.py
src/: App.tsx  index.css  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.pub  tauri.key  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src/components/: ActivityHeatmap.tsx  ContestList.tsx  DashboardGrid.tsx  DatePicker.tsx  Icons.tsx  PlatformCard.tsx  Settings.tsx  SettingsDrawer.tsx  TodoPanel.tsx
src/services/: contestService.ts
src/utils/: history.ts
