[package]
name = "contest-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri v2 核心依赖 ---
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# [新增] 更新插件依赖
tauri-plugin-updater = "2" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 爬虫业务依赖 ---
tokio = { version = "1", features = ["full"] }
# 注意：reqwest 0.12 需要配合 tokio 1，且配置方式略有不同，这里先用稳健配置
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "gzip"] } 
scraper = "0.20"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1" # [新增] 正则表达式库，用于处理 NowCoder 的数据匹配